# ConcurrentMerkle

./: .gitignore  CMakeLists.txt  MerkleTree.cpp  MerkleTree.h  MerkleTreeVerifier.h  README.md  SequentialMerkle.h  main.cpp  md5.h  setMain.cpp
_build/: CMakeCache.txt  cmake_install.cmake
_build/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
_build/ConcurrentMerkle.build/Debug/ALL_BUILD.build/: Script-FDFF8FC4049D4438A7B17260.sh  dgph  dgph~
_build/ConcurrentMerkle.build/Debug/ConcurrentMerkle.build/: dgph  dgph~
_build/ConcurrentMerkle.build/Debug/ConcurrentMerkle.build/Objects-normal/x86_64/: ConcurrentMerkle.LinkFileList  main.d
_build/ConcurrentMerkle.build/Debug/ZERO_CHECK.build/: Script-E4C88B8191864EE19B7774D2.sh  dgph  dgph~
_build/ConcurrentMerkle.xcodeproj/: project.pbxproj
_build/ConcurrentMerkle.xcodeproj/project.xcworkspace/xcuserdata/admin.xcuserdatad/: UserInterfaceState.xcuserstate
_build/ConcurrentMerkle.xcodeproj/xcuserdata/admin.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
_build/ConcurrentMerkle.xcodeproj/xcuserdata/admin.xcuserdatad/xcschemes/: xcschememanagement.plist
_build/Debug/: ConcurrentMerkle
notes/: presentation_notes
